# project-metrics

./: .gitignore  .pre-commit-config.yaml  404.html  BENCHMARKS.md  Makefile  README.md  codecov.yml  csv_to_md.py  index.html  mkdocs.yml  parse_metrics.py  project_metrics.py  pyproject.toml  scraped_data.json  setup_doc.sh  testfile.txt  wily-loc.md  wily-mi.md  {basepath}popular_repos.md
.config/: .readthedocs.yaml  .spellcheck.yml  .yamllint.yml  Makefile  codecov.yml  config.yml  settings.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  get_gh_repos.yml  get_metrics.yml  job_get_metrics.yml  job_qualify_code.yml  job_update_repos.yml  matrix_update_gh_repos.yml  qualify_code.yml  threading_update_gh_repos.yml  update_gh_repos.yml  update_repos.yml  wf.yml  wf_orig.yml
BENCHMARKS/: index.html
CHANGELOG/: index.html
OKRs/OKRs-2025-Q2/: index.html
SOPs/SOP-2025/: index.html
SOPs/changelog-SOP/: index.html
assets/: pyproject.txt  python-wf.txt  typescript-wf.txt
assets/Python/: wf.txt
assets/TypeScript/: package-lock.txt
code-analysis/kpi_N-body-simulations/: index.html
code-analysis/kpi_fitness-tracker/: index.html
code-analysis/kpi_project-metrics/: index.html
code-analysis/wily-loc/: index.html
code-analysis/wily-mi/: index.html
config/: .wordlist.txt
data/: popular_repos.csv  popular_repos.md  popular_repos.txt  repos_wo_desc.csv  repos_wo_desc.md  repos_wo_desc.txt
docs/: conf.py  index.rst  modules.rst
docs/project_docs/: BENCHMARKS.md  CHANGELOG.md  OKRs_2025_Q2.md  SOP_2025.md  index.md
docs/sphinx-docs/: setup_doc.sh
query-results/: group_by_lang.md  popular_repos.md  repos_wo_desc.md
query-results/commit-activity/: index.html
query-results/group-by-lang/: index.html
query-results/repo-sizes/: index.html
scripts/: shrink-repo.sh
search/: search_index.json
src/: add_gha_wf.py  config.py  csv_to_md.py  fetch_gh_graphql.py  get_badge.py  get_repo_size.py  get_repos.py  gh_graphql_get_largest_repos.py  kpi.py  make_md_table.py  matrix_add_badge.py  parallel_repo_processing.py  parse_metrics.py  project_metrics.py  readme_sentiment.py  remove_badge.py  rest_group_by_tag.py  rest_project_metrics.py  save_file_to_github.py  threading_add_badge.py  threading_add_gha_wf.py  txt_to_csv.py  update_readmes.py  wily_to_md.py
test/: __init__.py  test_add_gha_wf.py  test_csv_to_md.py  test_get_badge.py  test_get_gh_repos.py  test_get_readme_format.py  test_make_md_table.py  test_readme_sentiment.py  test_repo_has_lang.py  test_txt_to_csv.py  test_wily_to_md.py
(+83 files in other folders)
