[tool.poetry]
name = "project-metrics"
version = "1.0.0"
description = "Overview of projects and their health"
authors = ["Gustav Rasmussen <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
pygithub = "^2.4.0"
pandas = "^2.2.3"
tabulate = "^0.9.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
numpy = "^2.1"
ruff = "^0.8.1"
wily = "^1.24.2"
sphinx = "^8.1.3"
black = "^24.10.0"
pre-commit = "^3.8.0"
isort = "^5.13.2"
seaborn = "^0.13.2"
icecream = "^2.1.3"
loguru = "^0.7.2"
file-convertion-tools = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
